--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ input[type=time], input[type=text], input[type=date], select, #filterInput { wid
     <button id="clearDataBtn">Clear Data</button>
     <input type="date" id="exportFrom" title="From Date">
     <input type="date" id="exportTo" title="To Date">
+    <button id="viewFilterBtn">View</button>
     <input type="text" id="filterInput" placeholder="Filter Employee Name">
     <button id="shareTeamCountBtn">Team Count</button>
   </div>
@@ -90,7 +91,6 @@ let selectedDate = new Date().toISOString().split("T")[0];
 const dateInput = document.getElementById("workDate");
 dateInput.value = selectedDate;
 const filterInput = document.getElementById("filterInput");
-dateInput.addEventListener("change", ()=>{ selectedDate=dateInput.value; buildEmployeeTable(filterInput.value.trim().toLowerCase()); });
 
 // ==========================
 // Sidebar open/close
@@ -191,9 +191,9 @@ function buildTeamsContent(){
         if(!allData[selectedDate]) allData[selectedDate]={};
         team.employees.forEach(emp=>{
           if(!allData[selectedDate][emp.id]) allData[selectedDate][emp.id]={};
-          allData[selectedDate][emp.id].site = team.site;
-          allData[selectedDate][emp.id].in = team.siteIn;
-          allData[selectedDate][emp.id].out = team.siteOut;
+          allData[selectedDate][emp.id].site=team.site;
+          allData[selectedDate][emp.id].in=team.siteIn;
+          allData[selectedDate][emp.id].out=team.siteOut;
         });
         localStorage.setItem("allData", JSON.stringify(allData));
         buildEmployeeTable(filterInput.value.trim().toLowerCase());
@@ -206,27 +206,7 @@ function buildTeamsContent(){
       teamDiv.appendChild(wrap);
     }
 
-    // Employee dropdown
-    const empSelect = document.createElement("select");
-    const defaultOption = document.createElement("option"); defaultOption.textContent="Select Employee"; defaultOption.value=""; empSelect.appendChild(defaultOption);
-    masterEmployees.forEach(name=>{
-      const option = document.createElement("option"); option.value=name; option.textContent=name; empSelect.appendChild(option);
-    });
-    const addBtn = document.createElement("button"); addBtn.textContent="➕ Add Employee";
-    addBtn.onclick = ()=>{
-      const selectedName = empSelect.value;
-      if(!selectedName) return alert("Select employee from dropdown");
-      if(team.employees.find(e=>e.name===selectedName)) return alert("Employee already in this team");
-      const emp={id:Date.now(), name:selectedName, team:team.name, site:""};
-      team.employees.push(emp);
-      localStorage.setItem("teams", JSON.stringify(teams));
-      buildTeamsContent(); buildEmployeeTable(filterInput.value.trim().toLowerCase());
-    };
-
-    teamDiv.appendChild(empSelect);
-    teamDiv.appendChild(addBtn);
-
-    // Employee list display
+    // Employee list
     const ul=document.createElement("ul"); ul.dataset.team=team.name;
     team.employees.forEach(emp=>{
       const li=document.createElement("li"); li.className="employee-item";
@@ -237,13 +217,30 @@ function buildTeamsContent(){
       ul.appendChild(li);
     });
 
+    // Add Employee dropdown
+    const addSelect=document.createElement("select");
+    masterEmployees.forEach(name=>{
+      const option=document.createElement("option"); option.value=name; option.textContent=name;
+      addSelect.appendChild(option);
+    });
+    const addBtn=document.createElement("button"); addBtn.textContent="➕ Add Employee";
+    addBtn.onclick=()=>{
+      const name=addSelect.value;
+      if(!name) return;
+      const emp={id:Date.now(), name:name, team:team.name, site:""};
+      team.employees.push(emp);
+      localStorage.setItem("teams", JSON.stringify(teams));
+      buildTeamsContent();
+      buildEmployeeTable(filterInput.value.trim().toLowerCase());
+    };
+    teamDiv.appendChild(ul); teamDiv.appendChild(addSelect); teamDiv.appendChild(addBtn);
+
     new Sortable(ul,{group:'employees', animation:150, delay:150, delayOnTouchOnly:true, onEnd: evt=>{
       const empId=evt.item.dataset.empId;
       const newTeamName=evt.to.dataset.team;
       moveEmployeeToTeam(empId,newTeamName);
     }});
 
-    teamDiv.appendChild(ul);
     menu.appendChild(teamDiv);
   });
 }
@@ -263,7 +260,7 @@ function moveEmployeeToTeam(empId,newTeamName){
 }
 
 // ==========================
-// Table functions
+// Table
 const overtimeSummary = document.getElementById("overtimeSummary");
 filterInput.addEventListener("input", ()=>{ buildEmployeeTable(filterInput.value.trim().toLowerCase()); });
 
@@ -316,6 +313,54 @@ function updateOvertimeSummary(){
 }
 
 // ==========================
+// Save Data
+document.getElementById("saveBtn").addEventListener("click", ()=>{
+  if(!allData[selectedDate]) allData[selectedDate]={};
+  teams.forEach(team=>team.employees.forEach(emp=>{
+    if(!allData[selectedDate][emp.id]) allData[selectedDate][emp.id]={};
+    allData[selectedDate][emp.id].site=emp.site||team.site;
+    allData[selectedDate][emp.id].in=emp.siteIn||team.siteIn;
+    allData[selectedDate][emp.id].out=emp.siteOut||team.siteOut;
+  }));
+  localStorage.setItem("allData", JSON.stringify(allData));
+  alert("✅ Data saved for "+selectedDate);
+});
+
+// ==========================
+// View Filter
+document.getElementById("viewFilterBtn").addEventListener("click", ()=>{
+  const fromDate=document.getElementById("exportFrom").value||selectedDate;
+  const toDate=document.getElementById("exportTo").value||selectedDate;
+  buildEmployeeTableByRange(fromDate,toDate);
+});
+
+function buildEmployeeTableByRange(fromDate,toDate){
+  const table=document.getElementById("employeeTable");
+  table.innerHTML=`<tr><th>Employee Name</th><th>Date</th><th>Site Name</th><th>Site In</th><th>Site Out</th><th>Total Hours</th><th>Overtime Hours</th></tr>`;
+  let totalOvertime=0;
+  Object.keys(allData).sort().filter(d=>d>=fromDate && d<=toDate).forEach(date=>{
+    teams.forEach(team=>team.employees.forEach(emp=>{
+      const empData=allData[date][emp.id]; if(!empData) return;
+      const row=table.insertRow();
+      row.insertCell(0).textContent=emp.name;
+      row.insertCell(1).textContent=date;
+      row.insertCell(2).textContent=empData.site||"";
+      row.insertCell(3).textContent=empData.in||"";
+      row.insertCell(4).textContent=empData.out||"";
+      let totalH=0,overtimeH=0;
+      if(empData.in && empData.out){
+        const [inH,inM]=empData.in.split(":").map(Number); const [outH,outM]=empData.out.split(":").map(Number);
+        let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24; totalH=diff; overtimeH=(diff>9?diff-9:0);
+      }
+      row.insertCell(5).textContent=totalH.toFixed(2);
+      row.insertCell(6).textContent=overtimeH.toFixed(2);
+      totalOvertime+=overtimeH;
+    }));
+  });
+  overtimeSummary.textContent="Total Overtime: "+totalOvertime.toFixed(2)+" hrs";
+}
+
+// ==========================
 // Export CSV
 document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
   const fromDate=document.getElementById("exportFrom").value||selectedDate;
@@ -323,7 +368,7 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
   let rows=[["Employee Name","Date","Site Name","Site In","Site Out","Total Hours","Overtime Hours"]];
   Object.keys(allData).sort().filter(d=>d>=fromDate && d<=toDate).forEach(date=>{
     teams.forEach(team=>team.employees.forEach(emp=>{
-      const empData=allData[date]?.[emp.id]; if(!empData) return;
+      const empData=allData[date][emp.id]; if(!empData) return;
       let total="", overtime="";
       if(empData.in && empData.out){
         const [inH,inM]=empData.in.split(":").map(Number); const [outH,outM]=empData.out.split(":").map(Number);
@@ -339,16 +384,10 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
 
 // ==========================
 // Share Team Count
-
 document.getElementById("shareTeamCountBtn").addEventListener("click", ()=>{
-  // Save current teams data before opening view
   localStorage.setItem("teams", JSON.stringify(teams));
-  localStorage.setItem("allData", JSON.stringify(allData));
-  
-  // Open team count view page with current selected date
-  window.open("team_count.html?date=" + selectedDate, "_blank");
+  window.open("team_count.html?date="+selectedDate,"_blank");
 });
-
 
 // ==========================
 // Initialize
