--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ input[type=time], input[type=text], input[type=date], select, #filterInput { wid
 <script>
 // ==========================
 // Global Data
-let teams = JSON.parse(localStorage.getItem("teams")) || [
+let teams = [
   { name:"Team 1", site:"", siteIn:"", siteOut:"", employees:[] },
   { name:"Team 2", site:"", siteIn:"", siteOut:"", employees:[] },
   { name:"Team 3", site:"", siteIn:"", siteOut:"", employees:[] },
@@ -90,16 +90,27 @@ let selectedDate = new Date().toISOString().split("T")[0];
 // Date Picker
 const dateInput = document.getElementById("workDate");
 dateInput.value = selectedDate;
-const filterInput = document.getElementById("filterInput");
-dateInput.addEventListener("change", ()=>{ selectedDate=dateInput.value; buildEmployeeTable(filterInput.value.trim().toLowerCase()); });
+dateInput.addEventListener("change", ()=>{
+  selectedDate=dateInput.value;
+  if(allData[selectedDate]){ teams=allData[selectedDate]; }
+  else{ teams=[{name:"Team 1",site:"",siteIn:"",siteOut:"",employees:[]},
+               {name:"Team 2",site:"",siteIn:"",siteOut:"",employees:[]},
+               {name:"Team 3",site:"",siteIn:"",siteOut:"",employees:[]},
+               {name:"Team 4",site:"",siteIn:"",siteOut:"",employees:[]},
+               {name:"OFF",site:"",siteIn:"",siteOut:"",employees:[]}]; }
+  buildTeamsContent(); buildEmployeeTable();
+});
 
 // ==========================
 // Sidebar open/close
 const sidebar = document.getElementById("sidebar");
 const overlay = document.getElementById("overlay");
-const hamburgerBtn = document.getElementById("hamburgerBtn");
-hamburgerBtn.addEventListener("click", ()=>{ sidebar.classList.add("open"); overlay.style.display="block"; });
-overlay.addEventListener("click", ()=>{ sidebar.classList.remove("open"); overlay.style.display="none"; });
+document.getElementById("hamburgerBtn").addEventListener("click", ()=>{
+  sidebar.classList.add("open"); overlay.style.display="block";
+});
+overlay.addEventListener("click", ()=>{
+  sidebar.classList.remove("open"); overlay.style.display="none";
+});
 
 // Collapsible
 document.addEventListener("click", e=>{
@@ -111,33 +122,22 @@ document.addEventListener("click", e=>{
 });
 
 // ==========================
-// Clear Data
-document.getElementById("clearDataBtn").addEventListener("click", ()=>{
-  if(confirm("Clear all data for this date?")){
-    allData[selectedDate]={};
-    teams.forEach(team=>team.employees=[]);
-    buildTeamsContent();
-    buildEmployeeTable();
-    localStorage.setItem("allData", JSON.stringify(allData));
-    localStorage.setItem("teams", JSON.stringify(teams));
-    alert("✅ Data cleared for "+selectedDate);
-  }
-});
-
-// ==========================
 // Master Employee Functions
 function addToMasterList(){
   const name = prompt("Enter employee name:"); if(!name) return;
   if(masterEmployees.includes(name)) return alert("Employee already exists");
-  masterEmployees.push(name); saveMaster(); buildMasterList(); buildTeamsContent();
+  masterEmployees.push(name);
+  localStorage.setItem("masterEmployees", JSON.stringify(masterEmployees));
+  buildMasterList(); buildTeamsContent();
 }
-function saveMaster(){ localStorage.setItem("masterEmployees", JSON.stringify(masterEmployees)); }
 function buildMasterList(){
-  const ul = document.getElementById("masterList"); ul.innerHTML="";
+  const ul=document.getElementById("masterList"); ul.innerHTML="";
   masterEmployees.forEach(name=>{
-    const li = document.createElement("li"); li.textContent=name;
-    const del = document.createElement("button"); del.textContent="❌";
-    del.onclick=()=>{ masterEmployees = masterEmployees.filter(e=>e!==name); saveMaster(); buildMasterList(); buildTeamsContent(); };
+    const li=document.createElement("li"); li.textContent=name;
+    const del=document.createElement("button"); del.textContent="❌";
+    del.onclick=()=>{ masterEmployees=masterEmployees.filter(e=>e!==name);
+      localStorage.setItem("masterEmployees", JSON.stringify(masterEmployees));
+      buildMasterList(); buildTeamsContent(); };
     li.prepend(del); ul.appendChild(li);
   });
 }
@@ -148,22 +148,25 @@ buildMasterList();
 function addToMasterSiteList(){
   const name = prompt("Enter site name:"); if(!name) return;
   if(masterSites.includes(name)) return alert("Site already exists");
-  masterSites.push(name); saveMasterSites(); buildMasterSiteList(); buildTeamsContent();
+  masterSites.push(name);
+  localStorage.setItem("masterSites", JSON.stringify(masterSites));
+  buildMasterSiteList(); buildTeamsContent();
 }
-function saveMasterSites(){ localStorage.setItem("masterSites", JSON.stringify(masterSites)); }
 function buildMasterSiteList(){
-  const ul = document.getElementById("masterSiteList"); ul.innerHTML="";
+  const ul=document.getElementById("masterSiteList"); ul.innerHTML="";
   masterSites.forEach(name=>{
-    const li = document.createElement("li"); li.textContent=name;
-    const del = document.createElement("button"); del.textContent="❌";
-    del.onclick=()=>{ masterSites = masterSites.filter(e=>e!==name); saveMasterSites(); buildMasterSiteList(); buildTeamsContent(); };
+    const li=document.createElement("li"); li.textContent=name;
+    const del=document.createElement("button"); del.textContent="❌";
+    del.onclick=()=>{ masterSites=masterSites.filter(e=>e!==name);
+      localStorage.setItem("masterSites", JSON.stringify(masterSites));
+      buildMasterSiteList(); buildTeamsContent(); };
     li.prepend(del); ul.appendChild(li);
   });
 }
 buildMasterSiteList();
 
 // ==========================
-// Build Teams Dropdown
+// Teams Sidebar
 function buildTeamsContent(){
   const menu=document.getElementById("teamsContent");
   menu.innerHTML="";
@@ -172,194 +175,94 @@ function buildTeamsContent(){
     const title=document.createElement("h4"); title.textContent=team.name; teamDiv.appendChild(title);
 
     if(team.name!=="OFF"){
-      const siteSelect = document.createElement("select");
+      const siteSelect=document.createElement("select");
+      siteSelect.innerHTML='<option value="">Select Site</option>';
       masterSites.forEach(siteName=>{
-        const option = document.createElement("option");
-        option.value = siteName;
-        option.textContent = siteName;
-        if(siteName===team.site) option.selected = true;
-        siteSelect.appendChild(option);
+        const opt=document.createElement("option"); opt.value=siteName; opt.textContent=siteName;
+        if(siteName===team.site) opt.selected=true;
+        siteSelect.appendChild(opt);
       });
-
-      const siteInInput = document.createElement("input"); siteInInput.type="time"; siteInInput.value=team.siteIn;
-      const siteOutInput = document.createElement("input"); siteOutInput.type="time"; siteOutInput.value=team.siteOut;
-
+      const siteIn=document.createElement("input"); siteIn.type="time"; siteIn.value=team.siteIn;
+      const siteOut=document.createElement("input"); siteOut.type="time"; siteOut.value=team.siteOut;
       const applyBtn=document.createElement("button"); applyBtn.textContent="Apply to Team";
       applyBtn.onclick=()=>{
-        team.site = siteSelect.value;
-        team.siteIn = siteInInput.value;
-        team.siteOut = siteOutInput.value;
-        if(!allData[selectedDate]) allData[selectedDate]={};
-        team.employees.forEach(emp=>{
-          if(!allData[selectedDate][emp.id]) allData[selectedDate][emp.id]={};
-          allData[selectedDate][emp.id].site=team.site;
-          allData[selectedDate][emp.id].in=team.siteIn;
-          allData[selectedDate][emp.id].out=team.siteOut;
-        });
+        team.site=siteSelect.value; team.siteIn=siteIn.value; team.siteOut=siteOut.value;
+        allData[selectedDate]=teams;
         localStorage.setItem("allData", JSON.stringify(allData));
-        buildEmployeeTable(filterInput.value.trim().toLowerCase());
-        alert("✅ Applied to all team members");
+        buildEmployeeTable();
       };
-
-      const wrap = document.createElement("div");
-      wrap.innerHTML="<small>Default Site / In / Out:</small><br>";
-      wrap.appendChild(siteSelect); wrap.appendChild(siteInInput); wrap.appendChild(siteOutInput); wrap.appendChild(applyBtn);
-      teamDiv.appendChild(wrap);
+      teamDiv.appendChild(siteSelect); teamDiv.appendChild(siteIn); teamDiv.appendChild(siteOut); teamDiv.appendChild(applyBtn);
     }
 
-    // Employee dropdown
     const ul=document.createElement("ul"); ul.dataset.team=team.name;
     team.employees.forEach(emp=>{
       const li=document.createElement("li"); li.className="employee-item";
-      const delBtn=document.createElement("button"); delBtn.textContent="❌";
-      delBtn.onclick=()=>{ team.employees = team.employees.filter(e=>e.id!==emp.id); buildTeamsContent(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); };
-      li.appendChild(delBtn); li.appendChild(document.createTextNode(emp.name+(team.name!=="OFF"?` (${emp.site||team.site})`:"")));
-      li.dataset.empId = emp.id;
-      ul.appendChild(li);
+      const del=document.createElement("button"); del.textContent="❌";
+      del.onclick=()=>{ team.employees=team.employees.filter(e=>e.id!==emp.id); buildTeamsContent(); buildEmployeeTable(); };
+      li.appendChild(del); li.appendChild(document.createTextNode(emp.name));
+      li.dataset.empId=emp.id; ul.appendChild(li);
     });
 
-    const addSelect = document.createElement("select");
+    const addSelect=document.createElement("select");
     addSelect.innerHTML='<option value="">Select Employee</option>';
     masterEmployees.forEach(e=>{ addSelect.innerHTML+=`<option value="${e}">${e}</option>`; });
     const addBtn=document.createElement("button"); addBtn.textContent="➕ Add Employee";
-    addBtn.onclick=()=>{ 
-      if(!addSelect.value) return; 
-      const emp={id:Date.now(), name:addSelect.value, team:team.name, site:""}; 
-      team.employees.push(emp); 
-      localStorage.setItem("teams", JSON.stringify(teams)); 
-      buildTeamsContent(); 
-      buildEmployeeTable(filterInput.value.trim().toLowerCase());
+    addBtn.onclick=()=>{ if(!addSelect.value) return;
+      team.employees.push({id:Date.now(), name:addSelect.value});
+      allData[selectedDate]=teams;
+      localStorage.setItem("allData", JSON.stringify(allData));
+      buildTeamsContent(); buildEmployeeTable();
     };
-
     teamDiv.appendChild(addSelect); teamDiv.appendChild(addBtn);
 
-    new Sortable(ul,{group:'employees', animation:150, delay:150, delayOnTouchOnly:true, onEnd: evt=>{
+    new Sortable(ul,{group:"employees", animation:150, onEnd:evt=>{
       const empId=evt.item.dataset.empId;
       const newTeamName=evt.to.dataset.team;
       moveEmployeeToTeam(empId,newTeamName);
     }});
 
-    teamDiv.appendChild(ul);
-    menu.appendChild(teamDiv);
+    teamDiv.appendChild(ul); menu.appendChild(teamDiv);
   });
 }
 
-// Move employee between teams
 function moveEmployeeToTeam(empId,newTeamName){
   let emp, oldTeam;
-  teams.forEach(team=>team.employees.forEach(e=>{ if(e.id==empId){ emp=e; oldTeam=team; } }));
-  if(emp && emp.team!==newTeamName){
-    oldTeam.employees = oldTeam.employees.filter(e=>e.id!==empId);
-    const newTeam = teams.find(t=>t.name===newTeamName);
-    emp.team=newTeamName; newTeam.employees.push(emp);
-    localStorage.setItem("teams", JSON.stringify(teams));
-    buildTeamsContent();
-    buildEmployeeTable(filterInput.value.trim().toLowerCase());
+  teams.forEach(t=>t.employees.forEach(e=>{ if(e.id==empId){ emp=e; oldTeam=t; } }));
+  if(emp && oldTeam.name!==newTeamName){
+    oldTeam.employees=oldTeam.employees.filter(e=>e.id!=empId);
+    teams.find(t=>t.name===newTeamName).employees.push(emp);
+    allData[selectedDate]=teams;
+    localStorage.setItem("allData", JSON.stringify(allData));
+    buildTeamsContent(); buildEmployeeTable();
   }
 }
 
 // ==========================
-// Table
-const overtimeSummary = document.getElementById("overtimeSummary");
-filterInput.addEventListener("input", ()=>{ buildEmployeeTable(filterInput.value.trim().toLowerCase()); });
-
-function buildEmployeeTable(filterText=""){
+// Employee Table
+function buildEmployeeTable(){
   const table=document.getElementById("employeeTable");
-  table.innerHTML=`<tr><th>Employee Name</th><th>Date</th><th>Site Name</th><th>Site In</th><th>Site Out</th><th>Total Hours</th><th>Overtime Hours</th><th>Delete</th></tr>`;
-  if(!allData[selectedDate]) allData[selectedDate]={};
-  let totalOvertime=0;
+  table.innerHTML=`<tr><th>Name</th><th>Date</th><th>Site</th><th>In</th><th>Out</th></tr>`;
+  if(!allData[selectedDate]) return;
   teams.forEach(team=>team.employees.forEach(emp=>{
-    if(filterText && !emp.name.toLowerCase().includes(filterText)) return;
     const row=table.insertRow();
     row.insertCell(0).textContent=emp.name;
     row.insertCell(1).textContent=selectedDate;
-    const siteInput=document.createElement("input"); siteInput.value=allData[selectedDate][emp.id]?.site||emp.site;
-    row.insertCell(2).appendChild(siteInput);
-    const inInput=document.createElement("input"); inInput.type="time"; inInput.value=allData[selectedDate][emp.id]?.in||team.siteIn||"";
-    const outInput=document.createElement("input"); outInput.type="time"; outInput.value=allData[selectedDate][emp.id]?.out||team.siteOut||"";
-    row.insertCell(3).appendChild(inInput); row.insertCell(4).appendChild(outInput);
-    const totalCell=row.insertCell(5); const overtimeCell=row.insertCell(6);
-    const delCell=row.insertCell(7);
-    const delBtn=document.createElement("button"); delBtn.textContent="❌";
-    delBtn.onclick=()=>{ team.employees = team.employees.filter(e=>e.id!==emp.id); buildTeamsContent(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); };
-    delCell.appendChild(delBtn);
-
-    function updateAndSave(){
-      const [totalH, overtimeH]=calculateHours(inInput,outInput,totalCell,overtimeCell);
-      if(!allData[selectedDate][emp.id]) allData[selectedDate][emp.id]={};
-      allData[selectedDate][emp.id].in=inInput.value; allData[selectedDate][emp.id].out=outInput.value;
-      allData[selectedDate][emp.id].site=siteInput.value; localStorage.setItem("allData", JSON.stringify(allData));
-      updateOvertimeSummary();
-    }
-    inInput.addEventListener("change", updateAndSave);
-    outInput.addEventListener("change", updateAndSave);
-    siteInput.addEventListener("change", updateAndSave);
-    const [totalH, overtimeH]=calculateHours(inInput,outInput,totalCell,overtimeCell);
-    totalOvertime+=parseFloat(overtimeH);
+    row.insertCell(2).textContent=team.site||"";
+    row.insertCell(3).textContent=team.siteIn||"";
+    row.insertCell(4).textContent=team.siteOut||"";
   }));
-  updateOvertimeSummary();
-}
-
-function calculateHours(inInput,outInput,totalCell,overtimeCell){
-  const inTime=inInput.value, outTime=outInput.value;
-  if(!inTime||!outTime){ totalCell.textContent="❌"; overtimeCell.textContent="❌"; totalCell.style.background="red"; overtimeCell.style.background="red"; return [0,0]; }
-  totalCell.style.background=""; overtimeCell.style.background="";
-  const [inH,inM]=inTime.split(":").map(Number); const [outH,outM]=outTime.split(":").map(Number);
-  let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24; totalCell.textContent=diff.toFixed(2);
-  const overtime=(diff>9?diff-9:0); overtimeCell.textContent=overtime.toFixed(2);
-  return [diff,overtime];
-}
-
-function updateOvertimeSummary(){
-  let totalOT=0; const table=document.getElementById("employeeTable");
-  for(let i=1;i<table.rows.length;i++) totalOT+=parseFloat(table.rows[i].cells[6].textContent)||0;
-  overtimeSummary.textContent="Total Overtime: "+totalOT.toFixed(2)+" hrs";
 }
 
 // ==========================
-// Export CSV
-document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
-  const fromDate=document.getElementById("exportFrom").value||selectedDate;
-  const toDate=document.getElementById("exportTo").value||selectedDate;
-  let rows=[["Employee Name","Date","Site Name","Site In","Site Out","Total Hours","Overtime Hours"]];
-  Object.keys(allData).sort().filter(d=>d>=fromDate && d<=toDate).forEach(date=>{
-    teams.forEach(team=>team.employees.forEach(emp=>{
-      const empData=allData[date]?.[emp.id]; if(!empData) return;
-      let total="", overtime="";
-      if(empData.in && empData.out){
-        const [inH,inM]=empData.in.split(":").map(Number); const [outH,outM]=empData.out.split(":").map(Number);
-        let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24; total=diff.toFixed(2);
-        overtime=(diff>9?diff-9:0);
-      }
-      rows.push([emp.name,date,empData.site||emp.site,empData.in||"",empData.out||"",total,overtime]);
-    }));
-  });
-  const blob=new Blob([rows.map(r=>r.join(",")).join("\n")],{type:"text/csv"});
-  const a=document.createElement("a"); a.href=URL.createObjectURL(blob); a.download="employee_hours.csv"; a.click();
-});
-
-// ==========================
-// Save Data Button
+// Save Data
 document.getElementById("saveBtn").addEventListener("click", ()=>{
-  localStorage.setItem("teams", JSON.stringify(teams));
-  alert("✅ Data saved for "+selectedDate);
+  allData[selectedDate]=teams;
+  localStorage.setItem("allData", JSON.stringify(allData));
+  alert("Saved for "+selectedDate);
 });
 
 // ==========================
-// View Filter Button
-document.getElementById("viewFilterBtn").addEventListener("click", ()=>{ buildEmployeeTable(filterInput.value.trim().toLowerCase()); });
-
-// ==========================
-// Share Team Count
-document.getElementById("shareTeamCountBtn").addEventListener("click", ()=>{
-  localStorage.setItem("teams", JSON.stringify(teams));
-  window.open("team_count.html?date="+selectedDate,"_blank");
-});
-
-// ==========================
-// Initialize
 buildTeamsContent(); buildEmployeeTable();
 </script>
-
 </body>
 </html>
